Fix textarea width on mobile

--- a/assets/css/bettina.css
+++ b/assets/css/bettina.css
@@ -1414,6 +1414,9 @@ article.status-fik_checkout{
     .cart_image{
         display: none;
     }
+    #commentform textarea.form-control{
+        width: 300px !important;
+    }
 }
 @media screen and (max-width: 515px){
 	.logovestido{
